# chip_muro

./: .gitmodules  chip_ekf.cpp  chip_localization.launch  motor_handler.py  pwm.py
deployment/turtlebot_deployment/: CMakeLists.txt
deployment/turtlebot_deployment/src/: centroidKeyboard.cpp  ekf.cpp  ekf.cpp~  ekf2.cpp
localization-mounted-camera/turtlebot_camera_localization/: CMakeLists.txt
localization-mounted-camera/turtlebot_camera_localization/launch/: usb_all.launch  usb_cam_launch.launch
localization-mounted-camera/turtlebot_camera_localization/src/: chip_localization.cpp  main.cpp  main_3.cpp
mouse_localization/: CMakeLists.txt  package.xml
mouse_localization/launch/: mouse_event.launch
mouse_localization/msg/: mouse_events.msg  mouse_events0.msg  mouse_events1.msg
mouse_localization/scripts/: mouseEvent0.py  mouseEvent1.py  mouse_publisher0.py  mouse_publisher1.py
quadcopter/test_pkg/: CMakeLists.txt  package.xml
quadcopter/test_pkg/launch/: Deployment.launch  Deployment.launch~  JAVIER.launch  all_controls.launch  all_controls.launch~  all_ekf2.launch  formation_manual.launch  formation_person.launch  formation_person_quadcopter.launch  quadcopter_ekf_multiple.launch  slider.launch  tPlus.launch  tPlus.launch~
quadcopter/test_pkg/src/: CoMGeneratorRos.cpp  draw_projector.py  draw_projector.py~  formation_stabilization.py  formation_stabilization_distributed_translation.py  formation_stabilization_person.py  formation_translation.cpp  formation_translation_manual.cpp  formation_translation_person.cpp  formation_translation_person_quadcopter.cpp  goto.cpp  initialize_simulation.cpp  launch_dummies.cpp  quadcopter_ekf.cpp  quadcopter_ekf_multiple.cpp  relay_ardrone.cpp  relay_ardrone.cpp~  slider.cpp  slider.cpp~  slider_multiple.cpp
